opam-version: "2.0"
version: "v0.15.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/sexp_select"
bug-reports: "https://github.com/janestreet/sexp_select/issues"
dev-repo: "git+https://github.com/janestreet/sexp_select.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/sexp_select/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "4.08.0"}
  "base"     {>= "v0.15" & < "v0.16"}
  "ppx_jane" {>= "v0.15" & < "v0.16"}
  "dune"     {>= "2.0.0"}
]
synopsis: "A library to use CSS-style selectors to traverse sexp trees"
description: "
This library provides a convenient method to traverse sexp trees
and return subtrees that match the given program.
"
